Updates to README files related to SDK name.

--- a/Announcements/app/build.gradle
+++ b/Announcements/app/build.gradle
@@ -49,7 +49,7 @@ android {
         resValue "string", "USER_DOMAIN", appProperties['user_domain']
 
         //Default to using BlackBerry KMS, to use Cloud key storage (ex Firebase Database) change this value to true
-        buildConfigField("boolean", "USE_CLOUD_KEY", 'false')
+        buildConfigField("boolean", "USE_CLOUD_KEY", appProperties.getProperty("use_cloud_key", 'false'))
     }
 
     compileOptions {
