--- a/QuickStart/app.properties
+++ b/QuickStart/app.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2017 BlackBerry.  All Rights Reserved.
+# Copyright (c) 2018 BlackBerry.  All Rights Reserved.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,11 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+# Your Spark Domain ID
+user_domain="your_spark_domain"
 
+# Signing Keystore info:
+# Password used when creating Android signing keystore
 storePassword=your_store_password
+# Password used when creating app signing key
 keyPassword=your_key_password
+# Alias used when creating app signing key
 keyAlias=your_key_alias
+# Path to your Android signing Keystore
 storeFile=../your_store_file.jks
-client_server_id="your_client_server_id"
-cloud_messaging_sender_id="your_cloud_messaging_sender_id"
-user_domain="your_user_domain"
