--- a/Announcements/app/src/main/AndroidManifest.xml
+++ b/Announcements/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bbm.example.announcements">
 
     <application
@@ -22,7 +23,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <!-- Update this with the value provided by the BBM Enterprise Team -->
         <meta-data
