--- a/SimpleChat/app/build.gradle
+++ b/SimpleChat/app/build.gradle
@@ -61,7 +61,7 @@ android {
     }
 
     signingConfigs {
-        common {
+        release {
             keyAlias appProperties['keyAlias']
             keyPassword appProperties['keyPassword']
             storeFile file(appProperties['storeFile'])
@@ -72,12 +72,11 @@ android {
     buildTypes {
         debug {
             debuggable true
-            signingConfig signingConfigs.common
         }
         release {
             multiDexEnabled false
             minifyEnabled true
-            signingConfig signingConfigs.common
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -96,15 +95,4 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
-
-    implementation ('com.google.firebase:firebase-core:16.0.3')
-    implementation 'com.google.firebase:firebase-messaging:17.3.2'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
 }
-// By applying the plugin below this will ensure the project will not compile
-// if google-services.json is missing. When setting up this example please
-// ensure you follow https://developers.google.com/identity/sign-in/android/start
-// and download the resulting google-services.json file.
-
-apply plugin: 'com.google.gms.google-services'
