--- a/SimpleChat/app/src/main/AndroidManifest.xml
+++ b/SimpleChat/app/src/main/AndroidManifest.xml
@@ -16,14 +16,16 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bbm.example.simplechat">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <!-- Update this with the value provided by the BBM Enterprise Team -->
         <meta-data
