--- a/Whiteboard/app/src/main/AndroidManifest.xml
+++ b/Whiteboard/app/src/main/AndroidManifest.xml
@@ -26,11 +26,12 @@
 
     <application
         android:name="com.bbm.example.whiteboard.WhiteboardApp"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <!-- Update this with the value provided by the BBM Enterprise Team -->
         <meta-data
